--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -7,9 +7,9 @@ import Boton from '../atoms/Boton.astro';
 
 	<div class="hero__container">
 		<div class="text__content">
-			<h1 class="hero__title color__gradiente">Jhon Doe</h1>
+			<h1 class="hero__title color__gradiente">Sergio Alfranca</h1>
 			<p class="hero__text">
-				Una descripción breve y llamativa sobre el tema principal del sitio
+				Desarrollador full stack, interesado por conocimientos relativos a la IA y al e-Marketing
 			</p>
 			<Boton href="#" texto="Quiero saber más"/>
 		</div>
