--- a/src/components/atoms/Title.astro
+++ b/src/components/atoms/Title.astro
@@ -2,7 +2,7 @@
 const { contenido, margin } = Astro.props;
 ---
 
-<h2 class="color__gradiente" style=`margin-bottom:${margin}` >{contenido}</h2>
+<h2 class="color__gradiente" style=`margin-bottom:${margin}` >{Sergio Alfranca - Desarrollador Web}</h2>
 
 <style>
 	h2 {
