--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -17,11 +17,10 @@ import "./about.css"
 		<div class="about__content">
 			<Title margin="1rem" contenido="Sobre mí" />
 			<p class="about__text">
-				Habla sobre tí, tu profesión, lo que te gusta, cual es tu
-				pasatiempos, que haces en tu ratos libres, que cosas te apasionan y
-				has aprendido, ¿porqué elegiste está profesión?, ¿Tienes mascota?
-				¿Te gusta ir a caminar al parque? ¿Estudiaste algo más? ¿En que eres
-				bueno?
+				Me encanta el mundo de la tecnología además de deportes como el fútbol
+				o el baloncesto. Elegí esta rama porque siempre he sido muy curioso sobre Internet,
+				la informática y la programación (sobre todo Front-End). Me gusta ser una parte activa
+				en todos los proyectos en los que participo, además de aportar valor como individuo. 
 			</p>
 			<SocialIcons width="25" height="25"/>
 		</div>
