--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -20,7 +20,7 @@ import './Footer.css';
 							width="27"
 							height="27"
 							style="color: #dcd8fc"></iconify-icon></span
-					>jhon.doe@gmail.com</a>
+					>sergioalfrancaj@gmail.com</a>
 			</li>
 			<li>
 				<a class="footer__link"
