--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -24,7 +24,7 @@ import './Footer.css';
 			</li>
 			<li>
 				<a class="footer__link"
-                href="https://github.com/Sergio-AJ/main"
+                href="https://github.com/Sergio-AJ"
                 target="_blank"
                 rel="nofollow noreferrer noopener"
 					><span
