--- a/src/components/skills/components/skills-on-terminal/skillsOnTerminal.astro
+++ b/src/components/skills/components/skills-on-terminal/skillsOnTerminal.astro
@@ -14,21 +14,21 @@ import './skills-on-terminal.css';
 				name="Bootstrap"
 			/>
 			<TerminalIcon
-				src="/assets/angular.svg"
+				src="/assets/javascript.svg"
 				color="#FF4747"
-				name="Angular"
+				name="JavaScript"
 			/>
 			<TerminalIcon
-				src="/assets/react.svg"
+				src="/assets/php.svg"
 				color="#00D1FF"
-				name="React"
+				name="PHP"
 			/>
 			<TerminalIcon src="/assets/bun.svg" color="#F3CBC2" name="Bun" />
 			<TerminalIcon src="/assets/css.svg" color="#00A3FF" name="CSS" />
 			<TerminalIcon
-				src="/assets/electron.svg"
+				src="/assets/html.svg"
 				color="#3F75FF"
-				name="Electron"
+				name="HTML"
 			/>
 		</div>
 	</div>
