--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -4,19 +4,19 @@ const socialLinks = [
 	{
 		title: 'LinkedIn',
 		icon: 'simple-icons:linkedin',
-		href: 'https://www.linkedin.com/in/sofidev/',
+		href: 'https://www.linkedin.com/in/sergio-alfranca/',
 
 	},
 	{
 		title: 'Instagram',
 		icon: 'mdi:instagram',
-		href: 'https://www.instagram.com/',
+		href: 'https://www.instagram.com/jase.og/',
 
 	},
 	{
 		title: 'Tiwtter',
 		icon: 'ri:twitter-x-fill',
-		href: 'https://twitter.com/home',
+		href: 'https://twitter.com/',
 
 	},
 	{
