--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -15,7 +15,7 @@ import Boton from '../atoms/Boton.astro';
 		</div>
     <img
 		class="hero__img"
-		src="/img/jhon-doe.webp"
+		src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOGxrY3B5ejB2cnl4cTY3cWZlOGx0eHo4b2Z2b2hvaTh0b3U4cm90NyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/QpVUMRUJGokfqXyfa1/giphy.gif"
 		alt="Jhon Doe"
 		width="384"
     	height="384"
