--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -4,7 +4,7 @@ const socialLinks = [
 	{
 		title: 'LinkedIn',
 		icon: 'simple-icons:linkedin',
-		href: 'https://www.linkedin.com/in/sergio-alfranca/',
+		href: 'https://www.linkedin.com/in/sergio-alfranca-381b9b1a9/',
 
 	},
 	{
@@ -16,7 +16,7 @@ const socialLinks = [
 	{
 		title: 'Tiwtter',
 		icon: 'ri:twitter-x-fill',
-		href: 'https://twitter.com/',
+		href: 'https://twitter.com/jase__og',
 
 	},
 	{
