--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -9,7 +9,7 @@ import Boton from '../atoms/Boton.astro';
 		<div class="text__content">
 			<h1 class="hero__title color__gradiente">Sergio Alfranca</h1>
 			<p class="hero__text">
-				Desarrollador full stack, interesado por conocimientos relativos a la IA y al e-Marketing
+				Desarrollador Web, interesado por conocimientos relativos a la IA y al e-Marketing
 			</p>
 			<Boton href="#" texto="Quiero saber más"/>
 		</div>
