--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -6,7 +6,7 @@ const {name} = Astro.props;
     <div class="img__container">
         <img
             class="header__img"
-            src="/img/jhon-doe.webp"
+            src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOGxrY3B5ejB2cnl4cTY3cWZlOGx0eHo4b2Z2b2hvaTh0b3U4cm90NyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/QpVUMRUJGokfqXyfa1/giphy.gif"
             alt="sofiDev img"
             width="40px"
             height="40px"
