--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -10,7 +10,7 @@ import "./about.css"
 	<div class="about__container">
 		<img
 			class="about__img"
-			src="https://www.bpocenter.com.bo/wp-content/uploads/2017/11/10.jpg"
+			src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOGxrY3B5ejB2cnl4cTY3cWZlOGx0eHo4b2Z2b2hvaTh0b3U4cm90NyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/QpVUMRUJGokfqXyfa1/giphy.gif"
 			alt="Foto de perfil de Jhon Doe"
 		/>
 
