--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -10,7 +10,7 @@ import "./about.css"
 	<div class="about__container">
 		<img
 			class="about__img"
-			src="/img/"
+			src="/img/vecteezy_cartoon-character-with-the-desk-working-concept-illustration_44428139.png"
 			alt="Foto de perfil de Jhon Doe"
 		/>
 
