--- a/src/components/card-portfolio/CardPortfolio.astro
+++ b/src/components/card-portfolio/CardPortfolio.astro
@@ -25,7 +25,7 @@ const {
 	<div class="descripcion__container">
 		<h2 class="card__title">{title}</h2>
 		<div class="descripcion">
-			<p>{descripcion}</p>
+			<p>Página web inspirada en MILFSHAKES, la marca del influencer español Nil Ojeda</p>
 
 			<div class="skills">
 				{
