--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -10,6 +10,8 @@ import Card from './card-portfolio/CardPortfolio.astro';
 >
 	<div class="portfolio__container">
 		<Title contenido="Portafolio" />
+			<div class="descripcion_container">
+			</div>
 		
 	</div>
 </section>
