--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -10,7 +10,7 @@ import Card from './card-portfolio/CardPortfolio.astro';
 >
 	<div class="portfolio__container">
 		<Title contenido="Portafolio" />
-			<div class="descripcion_container">
+			<div class="descripcion">
 			</div>
 		
 	</div>
