--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -10,9 +10,13 @@ import Card from './card-portfolio/CardPortfolio.astro';
 >
 	<div class="portfolio__container">
 		<Title contenido="Portafolio" />
-			<div class="descripcion">
-			</div>
-		
+				<div class="portfolio__container">
+			<Title contenido="Portafolio" />
+				<div class="portfolio__elements">
+					{getPortafolioData.map((props) => <Card {...props} />)}
+				</div>
+			
+		</div>
 	</div>
 </section>
 
